@@ -1,3 +1,7 @@
+2008-02-22 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCast.c (createIvalStruct): fixed bug 1466761
+
 2008-02-21 Borut Razem <borut.razem AT siol.net>
 
 	* support/regression/Makefile.in,
